@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-10T08:16:05Z",
-  "count_outdated" : 3257,
-  "uniques_outdated" : 1355,
+  "timestamp" : "2023-11-10T16:16:40Z",
+  "count_outdated" : 3258,
+  "uniques_outdated" : 1356,
   "count" : 3287,
   "uniques" : 1372,
   "clones" : [
-    {
-      "timestamp": "2023-10-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-28T00:00:00Z",
       "count": 2,
