@@ -1,12 +1,7 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-10-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-28T00:00:00Z",
       "count": 2,
