@@ -1,3 +1,12 @@
+2023-11-10T16:16:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6827182543 # 2068
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
+* notice: last 14d: unq all: 3 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 1355 3257 / 1372 3287
+* notice: next accum: outdated-unq outdated-all / unq all: 1356 3258 / 1372 3287
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-27] / []
+
 2023-11-10T08:16:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6822353724 # 2067
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
